--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <version>2.4.1</version>
         </dependency>
 
+        <!-- JSoup HTML parser library @ http://jsoup.org/
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.1</version>
+        </dependency> -->
+
     </dependencies>
 
     <build>
