--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
             <groupId>com.objectdb</groupId>
             <artifactId>objectdb</artifactId>
             <scope>system</scope>
+            <version>1.0</version>
             <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/objectdb.jar</systemPath>
         </dependency>
 
