--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <repositories>
-        <repository>
-            <id>Java.Net</id>
-            <url>http://download.java.net/maven/2/</url>
-        </repository>
-    </repositories>
-
     <dependencies>
         <!-- Java EE 7.0-->
         <dependency>
@@ -94,7 +87,6 @@
             <artifactId>jsoup</artifactId>
             <version>1.8.1</version>
         </dependency>
-
         <!-- Quartz Scheduler-->
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
@@ -109,10 +101,10 @@
             <scope>system</scope>
             <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/androidmarketapi-0.6.jar</systemPath>
         </dependency>
-
         <dependency>
             <groupId>com.objectdb</groupId>
             <artifactId>objectdb</artifactId>
+            <version>0.6</version>
             <scope>system</scope>
             <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/objectdb.jar</systemPath>
         </dependency>
@@ -121,11 +113,42 @@
 
     <build>
         <finalName>storestats</finalName>
+        <!-- To define the plugin version in your parent POM -->
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.jboss.as.plugins</groupId>
+                    <artifactId>jboss-as-maven-plugin</artifactId>
+                    <version>7.7.Final</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
+            </plugin>
+            <!-- JBoss Application Server -->
+            <plugin>
+                <groupId>org.jboss.as.plugins</groupId>
+                <artifactId>jboss-as-maven-plugin</artifactId>
+                <version>7.7.Final</version>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                        <!-- Only remote server needs -->
+                        <configuration>
+                            <hostname>52.17.164.153</hostname>
+                            <port>9999</port>
+                            <username>jboss</username>
+                            <password>W3lcom3123</password>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
